--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 0;
   }
   .intro .intro-body .brand-heading {
-    font-size: 50px;
+    font-size: 50px !important;
   }
   .intro .intro-body .intro-text {
     font-size: 26px;
